samples/_failures_safe/1761358428_508fc2_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_28f445fb.c: In function ‘main’:
./samples/SAFE/__tmp_28f445fb.c:152:20: error: missing terminating " character
  152 |             printf("Failed to add edge
      |                    ^~~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_28f445fb.c:152:13: error: expected expression at end of input
  152 |             printf("Failed to add edge
      |             ^~~~~~
./samples/SAFE/__tmp_28f445fb.c:152:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_28f445fb.c:152:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_28f445fb.c:152:13: error: expected declaration or statement at end of input
